$Id: History,v 1.10 1999-05-03 17:26:10 japost Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

May       3, 99      J. Apostolakis 
   testG4ReplicaNavigation.cc
      Changed comparison of doubles, to give it a tolerance.  

April     8, 99      (committed & recorded J. Apostolakis  May 3rd)
   G4NavigationLevel.{hh,icc}: Minor Changes 
      added const to copy constructor and
      new 'new' operator with size_t - for STL use with preallocated containers" 


March    19, 99      J. Apostolakis        geomvol-01-00-03

   New tag for replica fix.


March    18, 99      J. Apostolakis

   A fix for looping in Replicas:
        In the case where a zero step is done in Replicas, we must allow
    ReplicaNavigator to handle the case itself - or else we loop.

March    11, 99      J. Apostolakis

   G4GRSVolume.icc: corrected G4Exception messages.

February 18, 99      J. Apostolakis        

 include/G4VoxelNavigation.hh
 src/G4VoxelNavigation.cc    : overwrote versions 1.2 with production version
      --->  when changes are refined and retested, they could be reincorporated

February 17, 99      J. Apostolakis        geomvol-01-00-02

 Moved G4PropagatorInField here from magneticfield to remove correct