@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4NavigationLevel.icc,v 1.4 1999-05-12 19:54:01 japost Exp $
+// $Id: G4NavigationLevel.icc,v 1.5 1999-05-17 13:12:49 stesting Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 30.09.97 J.Apostolakis Initial version. 
@@ -110,7 +110,7 @@ inline void* G4NavigationLevel::operator new(size_t)
 
 // Added for use by STL.  F.Behner  (used for pre-allocation)
 //
-inline void* G4NavigationLevel::operator new(size_t,G4NavigationLevel *a)
+inline void* G4NavigationLevel::operator new(size_t, void *a)
 {
   return (void *) a;
 }
